# jellysetup

./: .env.example  .gitignore  .mcp.json  BUILD.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-release.yml  build.yml
procedures/v1/: steps.json
procedures/v1/templates/: decypharr-config.json.j2  docker-compose.yml.j2
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/src/: crypto.rs  flash.rs  logging.rs  main.rs  master_config.rs  network.rs  sd_card.rs  ssh.rs  supabase.rs  template_engine.rs
src-tauri/src/services/: jellyfin.rs  jellyseerr.rs  mod.rs  prowlarr.rs  radarr.rs  sonarr.rs
src/components/Wizard/: Complete.tsx  ConfigForm.tsx  ConfigProgress.tsx  FlashProgress.tsx  MainMenu.tsx  PermissionCheck.tsx  QuickConnect.tsx  SDSelection.tsx  ServicesView.tsx  WaitingPi.tsx  Welcome.tsx
src/lib/: store.ts
supabase/: schema.sql
